--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,6 @@
 {
 	"hosting": {
+		"site": "pedrocourse-c8f31",
 		"public": "dist",
 		"ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
 	}
